kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-api
  ports:
    - name: http
      port: 80
      targetPort: 80
